cmake_minimum_required(VERSION 3.24.1)

set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_CXX_COMPILER /usr/local/opt/llvm/bin/clang++)
set(CMAKE_C_COMPILER /usr/local/opt/llvm/bin/clang)
set(CMAKE_CXX_STANDARD 20)

project(cses_solutions)

add_subdirectory(apartments)
add_subdirectory(apple_division)
add_subdirectory(array_description)
add_subdirectory(book_shop)
add_subdirectory(counting_rooms)
add_subdirectory(dynamic_min_range_queries)
add_subdirectory(dynamic_sum_queries)
add_subdirectory(edit_distance)
add_subdirectory(labyrinth)
add_subdirectory(message_route)
add_subdirectory(monsters)
add_subdirectory(movie_festival)
add_subdirectory(nearest)
add_subdirectory(playlist)
add_subdirectory(range_update)
add_subdirectory(range_xor) 
add_subdirectory(restaurant_customers)
add_subdirectory(sliding_window_median)
add_subdirectory(sliding_window_cost)
add_subdirectory(static_min_range_queries)
add_subdirectory(static_queries)
add_subdirectory(stick_lengths)
add_subdirectory(subarray_distinct)
add_subdirectory(subarray_division)
add_subdirectory(subarray_sums_2)
add_subdirectory(sum_values)
add_subdirectory(tasks_and_deadlines)
add_subdirectory(two_sets_2)
